RESOLVED FIXED193211
REGRESSION (r239519): ASSERTION FAILED: !m_adoptionIsRequired in com.apple.WebCore: void WTF::refIfNotNull<WebCore::CDMSessionMediaSourceAVFObjC> + 53
https://bugs.webkit.org/show_bug.cgi?id=193211
Summary REGRESSION (r239519): ASSERTION FAILED: !m_adoptionIsRequired in com.apple.We...
Jer Noble
Reported 2019-01-07 13:56:07 PST
REGRESSION (r239519): ASSERTION FAILED: !m_adoptionIsRequired in com.apple.WebCore: void WTF::refIfNotNull<WebCore::CDMSessionMediaSourceAVFObjC> + 53
Attachments
Patch (3.90 KB, patch)
2019-01-07 13:59 PST, Jer Noble
no flags
Jer Noble
Comment 1 2019-01-07 13:56:29 PST
Jer Noble
Comment 2 2019-01-07 13:59:18 PST
WebKit Commit Bot
Comment 3 2019-01-07 16:05:01 PST
Comment on attachment 358527 [details] Patch Clearing flags on attachment: 358527 Committed r239711: <https://trac.webkit.org/changeset/239711>
WebKit Commit Bot
Comment 4 2019-01-07 16:05:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.